objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>CRM_Lost_Reason__c</fullName>
        <label>Lost reason</label>
        <picklist>
            <picklistValues>
                <fullName>Cannot Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Serious/Researching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postcode/Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Contact Post Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went Direct To New Lender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn From Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Volume of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset outside guidelines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing expectations not met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dishonour payments on Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cashout purpose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No suitable product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unaceptable title</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not proceeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borrower on title</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mailing_City_Suburb__c</fullName>
        <label>Mailing City Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mailing_Floor_Number__c</fullName>
        <label>Mailing Floor Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mailing_Post_Code__c</fullName>
        <label>Mailing Post Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mailing_Property_Name__c</fullName>
        <label>Mailing Property Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mailing_State__c</fullName>
        <label>Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mailing_Street_Name__c</fullName>
        <label>Mailing Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mailing_Street_Number__c</fullName>
        <label>Mailing Street Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mailing_Street_Type__c</fullName>
        <label>Mailing Street Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mailing_Unit_Number__c</fullName>
        <label>Mailing Unit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Marketing_Opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing opt in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Maximum_Borrow__c</fullName>
        <label>Maximum borrow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Maximum_Borrowing_Power__c</fullName>
        <formula>CRM_Maximum_Repayment_per_year__c * (1 - (1 + CRM_Rate__c ) ^ (-CRM_Number_of_Periods__c) / CRM_Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum borrowing power</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Maximum_Repayment_p_a__c</fullName>
        <label>Maximum repayment p.a.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Maximum_Repayment_per_year__c</fullName>
        <formula>( CRM_Gross_Income_Borrower1__c +  CRM_Est_Rental_Income__c  - CRM_Tax__c + CRM_Living_Expenses__c )/

CRM_NSR__c -

((CRM_Credit_Card_Limit__c *  CRM_Credit_Card_Multiplier__c  *12) +  CRM_Other_Annual_Mortgage__c  +

CRM_Other_Annual_Liabilities__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum repayment per year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Monthly_Repayments__c</fullName>
        <label>Monthly repayments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Months_Self_Employed_Borrower1__c</fullName>
        <label>Months employed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Months_Self_Employed_Borrower2__c</fullName>
        <label>Months self employed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mortgage_Arrears__c</fullName>
        <label>Mortgage arrears</label>
        <picklist>
            <picklistValues>
                <fullName>0 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor conduct on unsecured debts</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Case_Id__c</fullName>
        <label>Case Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Postcode_Category__c</fullName>
        <label>Postcode Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_NSR__c</fullName>
        <formula>CRM_Available_Income__c  /  CRM_Total_Commitments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NSR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_No_of_Staff__c</fullName>
        <label>No. of Staff</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Number_of_Periods__c</fullName>
        <label>Number of periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Opportunity_Description__c</fullName>
        <label>Opportunity Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Opportunity_RecordType__c</fullName>
        <label>Opportunity RecordType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Other_Annual_Liabilities__c</fullName>
        <label>Other annual liabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Other_Annual_Mortgage__c</fullName>
        <label>Other annual mortgage payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Other_commercial_asset__c</fullName>
        <formula>Account.CRM_Other_commercial_asset__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional assets financed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Pepper_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pepper customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Postcode__c</fullName>
        <label>Postcode</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Preferred_Call_Date__c</fullName>
        <label>Preferred call date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Preferred_Call_Time__c</fullName>
        <label>Preferred call time</label>
        <picklist>
            <picklistValues>
                <fullName>Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afternoon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Preferred_Contact_Method__c</fullName>
        <label>Preferred contact method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contact</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Primary_contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Product_Category__c</fullName>
        <label>Product category</label>
        <picklist>
            <picklistValues>
                <fullName>Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Conforming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFG</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Product_Class_Name__c</fullName>
        <label>Mortgage Product class name</label>
        <picklist>
            <picklistValues>
                <fullName>Near Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Conforming</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Product_Variant__c</fullName>
        <label>Product Variant</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Product__c</fullName>
        <label>Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Property_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Property_Name__c</fullName>
        <label>Property Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Property_Type__c</fullName>
        <label>Property type</label>
        <picklist>
            <picklistValues>
                <fullName>Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Property_Value__c</fullName>
        <label>Property value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Purchase_Price__c</fullName>
        <label>Purchase price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Rate__c</fullName>
        <label>Rate</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Rating_Indicator__c</fullName>
        <formula>IF( ISPICKVAL(CRM_mtg_Rating__c, &apos;Hot&apos;), 
IMAGE(&apos;/resource/1512544939000/HotIndicator&apos;,&apos;red&apos;,30,30), 
IF(ISPICKVAL(CRM_mtg_Rating__c, &apos;Warm&apos;) , 
IMAGE(&apos;/resource/1512545001000/WarmIndicator&apos;,&apos;yellow&apos;,30,30), 
&apos;&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Raw_Data__c</fullName>
        <label>Raw web form data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Reference_Amount__c</fullName>
        <label>Reference amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Referral_Reason__c</fullName>
        <label>Follow Up Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Referral_Source__c</fullName>
        <label>Follow Up Attempt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Refinance_Amount__c</fullName>
        <label>Refinance amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Rental_Income_Frequency__c</fullName>
        <label>Rental income frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Security_Type__c</fullName>
        <label>Security Type</label>
        <picklist>
            <picklistValues>
                <fullName>House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NULL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Town House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacant Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit - Off the plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit - Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NULL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Street_Name__c</fullName>
        <label>Street Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Street_Number__c</fullName>
        <label>Street Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Street_Type__c</fullName>
        <label>Street Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_T_C_agreed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;C agreed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Term__c</fullName>
        <label>Term</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Total_Commitments__c</fullName>
        <label>Total commitments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Type_of_commercial_assets_accredited__c</fullName>
        <formula>TRIM(IF(INCLUDES( Account.CRM_Pepper_Assets_Financed__c , &quot;Yellow goods&quot;), &quot;Yellow goods;&quot;, &apos;&apos;)  + 
IF(INCLUDES( Account.CRM_Pepper_Assets_Financed__c , &quot;Green goods&quot;), &quot;Green goods;&quot;, &apos;&apos;)   + 
IF(INCLUDES( Account.CRM_Pepper_Assets_Financed__c , &quot;Heavy commercial&quot;), &quot;Heavy commercial;&quot;, &apos;&apos;)  + 
IF(INCLUDES( Account.CRM_Pepper_Assets_Financed__c , &quot;Professional equipment&quot;), &quot;Professional equipment;&quot;, &apos;&apos;) + 
IF(INCLUDES( Account.CRM_Pepper_Assets_Financed__c , &quot;Commercial equipment&quot;), &quot;Commercial equipment;&quot;, &apos;&apos;) + 
IF(INCLUDES( Account.CRM_Pepper_Assets_Financed__c , &quot;Business equipment&quot;), &quot;Business equipment;&quot;, &apos;&apos;) + 
IF(INCLUDES( Account.CRM_Pepper_Assets_Financed__c , &quot;Other&quot;), &quot;Other;&quot;, &apos;&apos;)  + 
IF(INCLUDES( Account.CRM_Pepper_Assets_Financed__c , &quot;Motor&quot;), &quot;Motor;&quot;, &apos;&apos;) + 
IF(INCLUDES( Account.CRM_Pepper_Assets_Financed__c , &quot;Bikes&quot;), &quot;Bikes;&quot;, &apos;&apos;) + 
IF(INCLUDES( Account.CRM_Pepper_Assets_Financed__c , &quot;Marine&quot;), &quot;Marine;&quot;, &apos;&apos;) +
IF(INCLUDES( Account.CRM_Pepper_Assets_Financed__c , &quot;Caravan&quot;), &quot;Caravan;&quot;, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pepper Assets Financed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Verified_Dealer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified dealer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_What_is_your_current_annual_Income__c</fullName>
        <label>What is your current annual income?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Where_property_is_located_PostCode__c</fullName>
        <label>Where the property is located (postcode)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Years_Self_Employed_Borrower1__c</fullName>
        <label>Years employed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Years_Self_Employed_Borrower2__c</fullName>
        <label>Years self employed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_mtg_Lost_Reason_Notes__c</fullName>
        <label>Lost Reason Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_mtg_Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_queryParamsString__c</fullName>
        <label>Cid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DE_Result__c</fullName>
        <description>Decision from the Decision Engine</description>
        <label>Decision Engine Result</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enquiry_Date__c</fullName>
        <description>Date of initial customer enquiry leading to the creation of the opportunity.</description>
        <inlineHelpText>Date of initial customer enquiry</inlineHelpText>
        <label>Enquiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVR__c</fullName>
        <formula>Amount / CRM_Property_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LVR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <formula>CRM_Lead__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Nurture_Enter_Date__c</fullName>
        <description>Date the Lead Nurture flag was last ticked.</description>
        <label>Lead Nurture Enter Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Nurture__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lead Nurture for Opportunity</description>
        <label>Lead Nurture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget / Lost Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision / Non-Responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI analysis completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <description>Rate displayed as a percentage</description>
        <formula>CRM_Rate__c/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Referrer_Account_Number__c</fullName>
        <externalId>true</externalId>
        <label>Referrer Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Analytics_Campaign__c</fullName>
        <description>Maps to Google Analytics parameter utm_campaign</description>
        <label>Web Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Analytics_Content__c</fullName>
        <description>Maps to Google Analytics parameter utm_content</description>
        <label>Web Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Analytics_ID__c</fullName>
        <description>Field to store Google Analytics ID from Lead</description>
        <label>Web Analytics ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Analytics_Medium__c</fullName>
        <description>Maps to Google Analytics parameter utm_medium</description>
        <label>Web Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Analytics_Referrer__c</fullName>
        <description>Google Analytics Referrer value</description>
        <label>Web Analytics Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Analytics_Source__c</fullName>
        <description>Maps to utm_source in Google Analytics</description>
        <label>Web Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Analytics_Term__c</fullName>
        <description>Maps to Google Analytics parameter utm_term</description>
        <label>Web Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>CRM_Flag__c</columns>
        <columns>CRM_Lead_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CRM_Application_ID__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CRM_Loan_Type__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost,Settled</value>
        </filters>
        <label>1.  LS - My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunities_LS</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>CRM_Flag__c</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>CRM_Application_Date__c</columns>
        <columns>CRM_Application_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Discovery</value>
        </filters>
        <label>6.  LS ALL Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_My_PPS_Pipeline</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CRM_Primary_contact__c</columns>
        <columns>CRM_Rating_Indicator__c</columns>
        <columns>CRM_Product_Class_Name__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CRM_Actual_loan_amount__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>PPS</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.B2B_Mortgage_Sales</value>
        </filters>
        <label>My PPS Pipeline</label>
        <sharedTo>
            <group>CRM_Mortgage_BDM_Executives</group>
            <group>CRM_Mortgage_Sales_Management</group>
        </sharedTo>
    </listViews>
</CustomObject>